[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["tokio"] }
tokio = { version = "1.25.0", features = ["full", "macros", "rt-multi-thread"] }
sea-orm = {version = "1.1.0",features = ["sqlx-mysql","runtime-tokio-rustls","macros"]}
dotenv = "0.15"
anyhow = "1.0.75"
entity = { path = "../entity" }
